# SixthLab

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yaml
